--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -1,124 +1,167 @@
 <!doctype html>
 <html lang="zh-CN">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Project Gray Zone</title>
-  <style>
-    /* “远古谷歌风”：白底、少样式、蓝链、朴素排版 */
-    body { margin: 0; background: #fff; color: #000; font: 16px/1.5 Arial, Helvetica, sans-serif; }
-    a { color: #00c; text-decoration: underline; }
-    a:visited { color: #551a8b; }
-    a:hover { color: #00c; }
-    .top { padding: 10px 12px; border-bottom: 1px solid #ccc; }
-    .brand { font-size: 20px; font-weight: bold; }
-    .hint { margin-top: 4px; color: #555; font-size: 13px; }
-    .wrap { display: table; width: 100%; border-collapse: collapse; }
-    .left { display: table-cell; width: 260px; vertical-align: top; padding: 10px 12px; border-right: 1px solid #ddd; }
-    .right { display: table-cell; vertical-align: top; padding: 10px 14px; }
-    .boxTitle { font-size: 13px; font-weight: bold; margin: 0 0 6px; }
-    .small { font-size: 13px; color: #555; }
-    ul { margin: 6px 0 0 18px; padding: 0; }
-    li { margin: 4px 0; }
-    h1 { font-size: 22px; margin: 6px 0 6px; }
-    h2 { font-size: 18px; margin: 22px 0 8px; }
-    hr { border: 0; border-top: 1px solid #ddd; margin: 14px 0; }
-    .metaLine { color: #777; font-size: 12px; margin-top: 2px; }
-    /* 小屏：上下布局 */
-    @media (max-width: 900px) {
-      .wrap { display: block; }
-      .left, .right { display: block; width: auto; border-right: 0; }
-      .left { border-bottom: 1px solid #ddd; }
-    }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Project Gray Zone</title>
+
+<style>
+/* ===== 老网页基础 ===== */
+body { margin:0; background:#fff; color:#000; font:16px/1.5 Arial, Helvetica, sans-serif; }
+a { color:#00c; text-decoration:underline; }
+a:visited { color:#551a8b; }
+
+.top { padding:10px 12px; border-bottom:1px solid #ccc; }
+.brand { font-size:20px; font-weight:bold; }
+.hint { margin-top:4px; color:#555; font-size:13px; }
+.metaLine { color:#777; font-size:12px; margin-top:2px; }
+
+.wrap { display:table; width:100%; border-collapse:collapse; }
+.left { display:table-cell; width:260px; vertical-align:top; padding:10px 12px; border-right:1px solid #ddd; }
+.right { display:table-cell; vertical-align:top; padding:10px 14px; }
+
+.boxTitle { font-size:13px; font-weight:bold; margin:0 0 6px; }
+.small { font-size:13px; color:#555; }
+ul { margin:6px 0 0 18px; padding:0; }
+li { margin:4px 0; }
+h1 { font-size:22px; margin:6px 0 6px; }
+h2 { font-size:18px; margin:22px 0 8px; }
+hr { border:0; border-top:1px solid #ddd; margin:14px 0; }
+
+/* ===== 复古蓝按钮（重点） ===== */
+.btn {
+  display:inline-block;
+  padding:3px 10px;
+  font-size:13px;
+  color:#003399;
+  text-decoration:none;
+  border:1px solid #7aa7e6;
+  border-radius:12px;
+  background: linear-gradient(#e8f0ff, #cfe0ff);
+  box-shadow: inset 0 1px 0 #ffffff;
+}
+
+.btn:hover {
+  background: linear-gradient(#f2f6ff, #dbe8ff);
+  border-color:#5a8fdc;
+  color:#002a80;
+}
+
+.btn:active {
+  background: linear-gradient(#cfe0ff, #e8f0ff);
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.2);
+}
+
+/* 小屏 */
+@media (max-width:900px){
+  .wrap{display:block;}
+  .left,.right{display:block;width:auto;border-right:0;}
+  .left{border-bottom:1px solid #ddd;}
+}
+</style>
 </head>
 
 <body>
-  <div class="top">
-    <div class="brand">Project Gray Zone</div>
-    <div class="hint">灰色地带的含义正在变化。我们希望推动更准确、更符合当下战场现实的理解方式。</div>
-    <div class="metaLine">CSFS64/test2 · 项目页面</div>
-  </div>
 
-  <div class="wrap">
-    <!-- 左侧目录（非常朴素） -->
-    <div class="left">
-      <div class="boxTitle">目录</div>
-      <div class="small">点击跳转到对应部分：</div>
-      <ul>
-        <li><a href="#about">项目简介</a></li>
-        <li><a href="#why">为什么需要更新“灰色地带”概念</a></li>
-        <li><a href="#how">我们将如何呈现与澄清</a></li>
-        <li><a href="#terms">术语与判定口径</a></li>
-        <li><a href="#sources">来源与引用</a></li>
-        <li><a href="#updates">更新记录</a></li>
-      </ul>
+<div class="top">
+  <div class="brand">Project Gray Zone</div>
+  <div class="hint">灰色地带的含义正在变化。我们希望推动更准确的理解方式。</div>
+  <div class="metaLine">CSFS64/test2 · 项目页面</div>
+</div>
 
-      <hr />
+<div class="wrap">
 
-      <div class="boxTitle">快速链接</div>
-      <ul>
-        <li><a href="#sources">跳到来源</a></li>
-        <li><a href="#updates">跳到更新记录</a></li>
-      </ul>
+  <!-- 左侧 -->
+  <div class="left">
+    <div class="boxTitle">目录</div>
+    <ul>
+      <li><a href="#about">项目简介</a></li>
+      <li><a href="#why">概念为何变化</a></li>
+      <li><a href="#how">呈现方式</a></li>
+      <li><a href="#terms">术语口径</a></li>
+      <li><a href="#sources">来源</a></li>
+      <li><a href="#updates">更新</a></li>
+    </ul>
 
-      <hr />
+    <hr>
 
-      <div class="small">
-        提示：新增章节只需：<br/>
-        1）目录加一行链接<br/>
-        2）右侧加一个 section
-      </div>
-    </div>
+    <div class="boxTitle">项目</div>
+    <p>
+      <a class="btn" href="#about">进入项目</a>
+      <a class="btn" href="#sources">查看来源</a>
+    </p>
 
-    <!-- 右侧正文 -->
-    <div class="right">
-      <h1>Project Gray Zone</h1>
-      <div class="small">这是项目说明页（内容可持续扩展）。页面尽量保持“老网页”风格，方便维护与快速更新。</div>
+    <hr>
 
-      <hr />
-
-      <section id="about">
-        <h2>项目简介</h2>
-        <p>（待补充：用一段话说明项目目的、面向读者、输出形式。）</p>
-      </section>
-
-      <section id="why">
-        <h2>为什么需要更新“灰色地带”概念</h2>
-        <p>（待补充：灰色地带随战争演进出现的新形态，传统“前线/后方/灰区”划分的局限。）</p>
-      </section>
-
-      <section id="how">
-        <h2>我们将如何呈现与澄清</h2>
-        <p>（待补充：例如：前线说明卡、时间线、案例条目、证据链等。）</p>
-      </section>
-
-      <section id="terms">
-        <h2>术语与判定口径</h2>
-        <p>（待补充：比如“控制线”“接触线”“渗透点”“交错阵地”“无人机主导交战”等。）</p>
-      </section>
-
-      <section id="sources">
-        <h2>来源与引用</h2>
-        <ul>
-          <li>X / Twitter：<a href="https://x.com/TuiteroMartin/status/2021980963253756136?s=20" target="_blank">TuiteroMartin 原帖</a></li>
-        </ul>
-        <div class="small">建议：每条关键结论都配一个来源链接，后续复核会非常省事。</div>
-      </section>
-
-      <section id="updates">
-        <h2>更新记录</h2>
-        <ul>
-          <li>2026-02-14：页面结构初始化（Project Gray Zone）。</li>
-        </ul>
-      </section>
-
-      <hr />
-
-      <div class="small">
-        返回：<a href="./">仓库主页（GitHub Pages 根目录）</a>
-      </div>
+    <div class="small">
+      提示：新增章节只需：<br>
+      1）目录加链接<br>
+      2）右侧加 section
     </div>
   </div>
+
+  <!-- 右侧 -->
+  <div class="right">
+    <h1>Project Gray Zone</h1>
+    <div class="small">说明灰色地带概念的演变与再定义。</div>
+
+    <hr>
+
+    <section id="about">
+      <h2>项目简介</h2>
+      <p>
+        本项目旨在说明随着战争形态的变化，“灰色地带”的实际含义
+        已与传统认知产生明显偏离。
+      </p>
+      <p>
+        <a class="btn" href="#why">阅读概念变化</a>
+      </p>
+    </section>
+
+    <section id="why">
+      <h2>为什么灰色地带正在变化</h2>
+      <p>（待补充）</p>
+      <p>
+        <a class="btn" href="#terms">查看术语</a>
+      </p>
+    </section>
+
+    <section id="how">
+      <h2>我们将如何呈现</h2>
+      <p>（待补充）</p>
+    </section>
+
+    <section id="terms">
+      <h2>术语与判定口径</h2>
+      <p>（待补充）</p>
+    </section>
+
+    <section id="sources">
+      <h2>来源</h2>
+      <ul>
+        <li>
+          <a href="https://x.com/TuiteroMartin/status/2021980963253756136?s=20" target="_blank">
+            TuiteroMartin 原帖
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <section id="updates">
+      <h2>更新记录</h2>
+      <ul>
+        <li>2026-02-14：Project Gray Zone 页面建立</li>
+      </ul>
+    </section>
+
+    <hr>
+
+    <div class="small">
+      <a class="btn" href="./">返回主页</a>
+    </div>
+
+  </div>
+</div>
+
 </body>
 </html>
