--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -6,18 +6,17 @@
 <title>Project Gray Zone</title>
 
 <style>
-  /* ===== 复古站点：浅灰背景 + 面板布局（让按钮不突兀） ===== */
+  /* ===== 复古站点：浅灰背景 + 内容框 ===== */
   body{
     margin:0;
-    background:#f2f2f2;               /* 轻灰底：老网页常见 */
+    background:#f2f2f2;
     color:#000;
     font:16px/1.55 Arial, Helvetica, sans-serif;
   }
-
   a{ color:#00c; text-decoration:underline; }
   a:visited{ color:#551a8b; }
 
-  /* 顶栏：淡灰条 + 细边框 */
+  /* 顶栏固定（不动） */
   .top{
     padding:10px 12px;
     background:#e9e9e9;
@@ -27,34 +26,31 @@
   .hint{ margin-top:4px; color:#444; font-size:13px; }
   .metaLine{ color:#666; font-size:12px; margin-top:2px; }
 
-  /* 主容器：居中“老网站内容框” */
   .page{
     max-width: 1100px;
     margin: 14px auto;
     padding: 0 10px;
   }
 
-  /* 框体：像旧论坛/旧 CMS 的 content box */
   .frame{
     background:#fff;
     border:1px solid #bfbfbf;
-    box-shadow: 0 1px 0 rgba(255,255,255,0.8) inset;
   }
 
-  /* 用 table 风格布局很“老” */
+  /* 老式 table 布局 */
   .wrap{ display:table; width:100%; border-collapse:collapse; }
   .left{
     display:table-cell;
     width:260px;
     vertical-align:top;
-    background:#f7f7f7;              /* 左栏浅灰，让按钮融进 UI */
+    background:#f7f7f7;
     border-right:1px solid #d2d2d2;
     padding:10px 12px;
   }
   .right{
     display:table-cell;
     vertical-align:top;
-    padding:10px 14px 18px;
+    padding:10px 12px;
   }
 
   .boxTitle{ font-size:13px; font-weight:bold; margin:0 0 6px; }
@@ -65,19 +61,17 @@
   h2{ font-size:18px; margin:22px 0 8px; }
   hr{ border:0; border-top:1px solid #ddd; margin:14px 0; }
 
-  /* ===== 复古按钮：降低“亮蓝”，使用更灰一点的蓝，和面板同体系 ===== */
+  /* 复古蓝按钮（更融入面板） */
   .btn{
     display:inline-block;
     padding:4px 10px;
     font-size:13px;
     color:#003399;
-    text-decoration:none;            /* 按钮不要下划线 */
-    border:1px solid #8aa9d6;        /* 边框与面板一致的“旧蓝灰” */
+    text-decoration:none;
+    border:1px solid #8aa9d6;
     border-radius:10px;
-    background: linear-gradient(#f4f8ff, #dbe8ff); /* 轻渐变 */
-    box-shadow:
-      inset 0 1px 0 #ffffff,
-      0 1px 0 rgba(0,0,0,0.05);      /* 微立体：不现代 */
+    background: linear-gradient(#f4f8ff, #dbe8ff);
+    box-shadow: inset 0 1px 0 #ffffff, 0 1px 0 rgba(0,0,0,0.05);
   }
   .btn:hover{
     border-color:#6f94cc;
@@ -88,15 +82,27 @@
     background: linear-gradient(#dbe8ff, #f4f8ff);
     box-shadow: inset 0 1px 3px rgba(0,0,0,0.18);
   }
-
-  /* 一组按钮之间的间距 */
   .btnRow .btn{ margin-right:6px; margin-bottom:6px; }
 
-  /* 小屏：上下布局 */
+  /* ===== “Word滚动内容区”核心 =====
+     右侧不是整页滚动，而是 main 自己滚动 */
+  .docWrap{
+    border:1px solid #cfcfcf;
+    background:#ffffff;
+    padding: 10px 12px;
+    height: calc(100vh - 170px);  /* 视口高度 - 顶部与外边距，近似 Word 视窗 */
+    overflow: auto;
+  }
+
+  /* 让锚点跳转不会被标题贴边 */
+  .docWrap section{ scroll-margin-top: 12px; }
+
+  /* 移动端：恢复为页面滚动（因为小屏里“局部滚动”体验差） */
   @media (max-width:900px){
     .wrap{ display:block; }
     .left,.right{ display:block; width:auto; border-right:0; }
     .left{ border-bottom:1px solid #d2d2d2; }
+    .docWrap{ height: auto; overflow: visible; } /* 小屏改回正常滚动 */
   }
 </style>
 </head>
@@ -112,6 +118,7 @@
     <div class="frame">
       <div class="wrap">
 
+        <!-- 左侧：固定不动（因为页面不滚动，只有 docWrap 滚动） -->
         <div class="left">
           <div class="boxTitle">目录</div>
           <ul>
@@ -141,58 +148,87 @@
           </div>
         </div>
 
+        <!-- 右侧：只有这里滚动 -->
         <div class="right">
-          <h1>Project Gray Zone</h1>
-          <div class="small">说明“灰色地带”随着战争形态演进而发生的变化，并呼吁更新大众认知。</div>
+          <div class="docWrap" id="doc">
+            <h1>Project Gray Zone</h1>
+            <div class="small">说明“灰色地带”随着战争形态演进而发生的变化，并呼吁更新大众认知。</div>
 
-          <hr>
+            <hr>
 
-          <section id="about">
-            <h2>项目简介</h2>
-            <p>（待你补充）</p>
-            <div class="btnRow">
-              <a class="btn" href="#why">阅读概念变化</a>
-            </div>
-          </section>
+            <section id="about">
+              <h2>项目简介</h2>
+              <p>（待你补充）</p>
+              <div class="btnRow">
+                <a class="btn" href="#why">阅读概念变化</a>
+              </div>
+            </section>
 
-          <section id="why">
-            <h2>为什么灰色地带正在变化</h2>
-            <p>（待你补充）</p>
-          </section>
+            <section id="why">
+              <h2>为什么灰色地带正在变化</h2>
+              <p>（待你补充）</p>
+            </section>
 
-          <section id="how">
-            <h2>我们将如何呈现与澄清</h2>
-            <p>（待你补充）</p>
-          </section>
+            <section id="how">
+              <h2>我们将如何呈现与澄清</h2>
+              <p>（待你补充）</p>
+            </section>
 
-          <section id="terms">
-            <h2>术语与判定口径</h2>
-            <p>（待你补充）</p>
-          </section>
+            <section id="terms">
+              <h2>术语与判定口径</h2>
+              <p>（待你补充）</p>
+            </section>
 
-          <section id="sources">
-            <h2>来源与引用</h2>
-            <ul>
-              <li><a href="https://x.com/TuiteroMartin/status/2021980963253756136?s=20" target="_blank">TuiteroMartin 原帖</a></li>
-            </ul>
-          </section>
+            <section id="sources">
+              <h2>来源与引用</h2>
+              <ul>
+                <li><a href="https://x.com/TuiteroMartin/status/2021980963253756136?s=20" target="_blank">TuiteroMartin 原帖</a></li>
+              </ul>
+            </section>
 
-          <section id="updates">
-            <h2>更新记录</h2>
-            <ul>
-              <li>2026-02-14：Project Gray Zone 页面建立</li>
-            </ul>
-          </section>
+            <section id="updates">
+              <h2>更新记录</h2>
+              <ul>
+                <li>2026-02-14：Project Gray Zone 页面结构建立（目录 + 文档滚动区）。</li>
+              </ul>
+              <div class="btnRow">
+                <a class="btn" href="./">返回主页</a>
+              </div>
+            </section>
 
-          <hr>
-
-          <div class="btnRow">
-            <a class="btn" href="./">返回主页</a>
           </div>
         </div>
 
       </div>
     </div>
   </div>
+
+<script>
+  // 让左侧目录点击时，在“docWrap”里滚动，而不是整页跳转
+  (function () {
+    var doc = document.getElementById('doc');
+    if (!doc) return;
+
+    document.querySelectorAll('a[href^="#"]').forEach(function (a) {
+      a.addEventListener('click', function (e) {
+        var href = a.getAttribute('href');
+        if (!href || href === '#') return;
+
+        var id = href.slice(1);
+        var target = document.getElementById(id);
+        if (!target) return;
+
+        e.preventDefault();
+
+        // 更新 URL hash（可选，便于复制链接）
+        history.replaceState(null, '', '#' + id);
+
+        // 在 doc 容器内平滑滚动到目标
+        target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+      });
+    });
+  })();
+</script>
+
 </body>
 </html>
