--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -181,7 +181,7 @@
 
               <h1>Project Gray Zone</h1>
 
-              <p>（这里是项目导语：说明灰色地带概念已经随战争形态变化而发生偏移，我们需要更新公众对“灰色地带”的理解框架。本页将持续汇总定义、口径、案例与来源。）</p>
+              <p>Project Gray Zone是Kalyna OSINT于2026年2月12日启动的项目。灰色地带概念已经随战争形态变化而发生偏移，而我们的目标是更新公众对“灰色地带”的理解框架，推动开源分析社区对“灰色地带”定义的转变，更新公众对“灰色地带”的理解框架。本页将持续汇总定义、口径、案例与来源。</p>
 
               <h2 id="about">项目简介</h2>
               <p>（待补充：项目目标、读者对象、输出形式。）</p>
