--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -154,12 +154,9 @@
         <div class="left">
           <div class="boxTitle">目录</div>
           <ul>
-            <li><a href="#about">项目简介</a></li>
-            <li><a href="#claim">核心主张</a></li>
-            <li><a href="#method">方法与呈现</a></li>
-            <li><a href="#terms">术语与判定口径</a></li>
-            <li><a href="#sources">来源与引用</a></li>
-            <li><a href="#updates">更新记录</a></li>
+            <li><a href="#effect">新的地图标准</a></li>
+            <li><a href="#intro">灰色地带过去的定义</a></li>
+            <li><a href="#now">现在的灰色地带</a></li>
           </ul>
 
           <hr>
@@ -181,22 +178,24 @@
 
               <h1>Project Gray Zone</h1>
 
-              <p>Project Gray Zone是Kalyna OSINT于2026年2月12日启动的项目。灰色地带概念已经随战争形态变化而发生偏移，而我们的目标是更新公众对“灰色地带”的理解框架，推动开源分析社区对“灰色地带”定义的转变，更新公众对“灰色地带”的理解框架。本页将持续汇总定义、口径、案例与来源。</p>
+              <p>Project Gray Zone是Kalyna OSINT于2026年2月12日启动的项目。灰色地带概念已经随战争形态变化而发生偏移，而我们的目标是更新公众对“灰色地带”的理解框架，推动OSINT社区转变在开源分析中对“灰色地带”的定义。本页将持续汇总定义、口径、案例与来源。</p>
+              
+              <p>该分析将随着研究和更多数据而持续更新，你所看到的并不是最终内容。你可以从Kalyna OSINT官方网站“项目”部分再次进入。</p>
 
-              <h2 id="about">项目简介</h2>
-              <p>（待补充：项目目标、读者对象、输出形式。）</p>
+              <h2 id="effect">新的地图参考标准</h2>
+              <p>随着我们更新对灰色地带的定义，我们的互动地图Kalyna Battle Map所绘制的前线也将参照这一标准发生改变。目前，我们将在第聂伯彼得罗浮斯克和扎波罗热地区率先使用这一标准。</p>
+              <p>新的前线取消了灰色地带，只由红蓝控制区和它们重叠的部分构成，下文将详细解释这样做的含义。</p>
+              
+              <h2 id="intro">灰色地带在过去的定义</h2>
+              <p>在过去，特别是2023-2024年间，战争研究机构和开源分析社区对于灰色地带的定义主要是两种区域的叠加或其中一种：灰色地带和交战区。灰色地带代表着一片不存在战争双方阵地的区域；
+              而交战区则代表着一片双方士兵都能临时进入，但难以站稳脚跟的区域。</p>
 
-              <h2 id="claim">核心主张</h2>
-              <p>（待补充：你希望大家改变的旧认知是什么？新的认知是什么？）</p>
+              <p>相对的，双方都存在稳定的控制线，在控制线内友军士兵占据所有阵地，控制所有增援路线，形成对区域的稳定控制，几乎无需担心存在敌方渗透。因此，在那一段时间通过地理定位来证实前线变化是十分容易的，
+              受到对方攻击的定位代表友方稳定控制，受到友方攻击的定位代表敌方稳定控制，双方袭击频繁的区域则为交战区。</p>
 
-              <h2 id="method">方法与呈现</h2>
-              <p>（待补充：证据链、时间戳、交叉验证、不确定性表达等。）</p>
-
-              <h2 id="terms">术语与判定口径</h2>
-              <p>（待补充：术语定义与使用规则。）</p>
-
-              <h2 id="sources">来源与引用</h2>
-              <p>本项目引用的关键来源之一如下：</p>
+              <h2 id="now">现在的“灰色地带”</h2>
+              <p>在2025年间，由于缺少真正的突破力量、实现目标所需要的人力和迫于宣传需要，俄罗斯军队大规模通过自杀式袭击或渗透的方式将步兵送入目标地点展示旗帜。不仅如此，恶劣的天气
+              和无人机的大量使用也让步兵渗透更加容易。</p>
 
               <div class="refs">
                 <p>Martin. (n.d.). Post on X (Twitter). <a href="https://x.com/TuiteroMartin/status/2021980963253756136?s=20" target="_blank">https://x.com/TuiteroMartin/status/2021980963253756136?s=20</a></p>
