--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -143,7 +143,6 @@
 
     display:flex;
     justify-content:center;
-    padding:16px 52px 16px 24px; /* 右侧留灰空间给滚动条 */
   }
 
   /* 白纸：唯一白色区域 */
@@ -234,6 +233,9 @@
       border-right:0;
     }
   }
+
+  .scrollPane{ align-items: flex-start; }
+  .doc{ align-self: flex-start; }
 </style>
 </head>
 
@@ -306,7 +308,6 @@
             <h1 data-lang="zh">Project Gray Zone</h1>
             <h1 data-lang="en">Project Gray Zone</h1>
 
-            <!-- ✅ 保留你的内容（中文原文） + 我补了英文版用于切换 -->
             <p data-lang="zh">Project Gray Zone是Kalyna OSINT于2026年2月12日启动的项目。灰色地带概念已经随战争形态变化而发生偏移，而我们的目标是更新公众对“灰色地带”的理解框架，推动OSINT社区转变在开源分析中对“灰色地带”的定义。本页将持续汇总定义、口径、案例与来源。</p>
             <p data-lang="en">Project Gray Zone is a Kalyna OSINT initiative launched on Feb 12, 2026. As the concept of “gray zones” has shifted with changes in the character of war, our goal is to update the public framework and encourage the OSINT community to revise how “gray zones” are defined in open-source analysis. This page will continuously consolidate definitions, criteria, cases, and sources.</p>
 
