--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -7,8 +7,8 @@
 
 <style>
   :root{
-    --bg:#e6e6e6;         /* 阅读器工作区灰 */
-    --panel:#ededed;      /* 侧栏灰 */
+    --bg:#e6e6e6;
+    --panel:#ededed;
     --line:#c8c8c8;
     --text:#000;
     --muted:#444;
@@ -29,7 +29,6 @@
   a{ color:var(--link); text-decoration:underline; }
   a:visited{ color:var(--visited); }
 
-  /* 顶栏：阅读器风 */
   .top{
     padding:10px 12px;
     background:var(--panel);
@@ -71,7 +70,6 @@
   ul{ margin:6px 0 0 18px; padding:0; }
   li{ margin:6px 0; }
 
-  /* ===== 2012 Web2.0 工业银按钮 ===== */
   .btn{
     display:inline-block;
     font-size:13px;
@@ -98,14 +96,13 @@
   }
   .btnRow{ display:flex; flex-wrap:wrap; gap:8px; }
 
-  /* 侧栏工具区：阅读器控件 */
   .toolbar{
     display:flex;
     flex-direction:column;
     gap:10px;
   }
 
-  /* 搜索条（老网页风） */
+
   .searchRow{
     display:flex;
     gap:6px;
@@ -130,22 +127,9 @@
     line-height:1.3;
   }
 
-  /* 语言切换：两段文字版本用 data-lang 控制显示 */
   .lang-zh [data-lang="en"]{ display:none; }
   .lang-en [data-lang="zh"]{ display:none; }
 
-  /* 右侧滚动：只有这里滚 */
-  .scrollPane{
-    height: calc(100vh - 84px);
-    overflow-y:auto;
-    overflow-x:hidden;
-    background:transparent;
-
-    display:flex;
-    justify-content:center;
-  }
-
-  /* 白纸：唯一白色区域 */
   .doc{
     box-sizing:border-box;
     background:var(--paper);
@@ -154,13 +138,10 @@
     padding:1in;
     border:1px solid #d6d6d6;
 
-    /* APA/Word */
-    font-family:"Times New Roman", Times, "Courier New", monospace;
     font-size:12pt;
     line-height:2;
     color:#000;
   }
-  :lang(zh), :lang(zh-CN){ font-family:"Courier New", monospace; }
 
   .doc p{
     margin:0 0 0.5em 0;
@@ -190,7 +171,6 @@
 
   .doc [id]{ scroll-margin-top:12px; }
 
-  /* 搜索高亮 */
   mark.hl{
     background:#ffe58a;
     padding:0 1px;
@@ -199,22 +179,19 @@
     outline: 2px solid #ff9900;
   }
 
-  /* ===== 打印/PDF：只打印白纸内容 ===== */
   @media print{
     body{ background:#fff; }
     .top,.left,.scrollPane{ display:none !important; }
     .page{ margin:0; padding:0; max-width:none; }
     .right{ padding:0; }
-    /* 直接把 doc 当作整页打印 */
     .doc{
       border:0;
       width:auto;
       max-width:none;
-      padding:0.75in; /* 打印边距 */
+      padding:0.75in;
     }
   }
 
-  /* 小屏：上下布局，滚动回归页面 */
   @media (max-width:900px){
     .wrap{ display:block; }
     .left,.right{ display:block; width:auto; padding:0; }
