--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -132,25 +132,27 @@
 
   .scrollPane{
     height: calc(100vh - 84px);
-    overflow-y:auto;
-    overflow-x:hidden;
-    background:transparent;
-
+    overflow: hidden;
+    background: transparent;
+  
     display:flex;
     justify-content:center;
+    padding: 16px 0;
+    align-items: flex-start;
   }
-
+  
   .doc{
-    box-sizing:border-box;
-    background:var(--paper);
-    width:8.5in;
-    max-width:100%;
-    padding:1in;
-    border:1px solid #d6d6d6;
-
-    font-size:12pt;
-    line-height:2;
-    color:#000;
+    box-sizing: border-box;
+    background: var(--paper, #fff);
+    width: 8.5in;
+    max-width: 100%;
+  
+    height: calc(100vh - 140px);
+    overflow-y: auto;
+    overflow-x: hidden;
+  
+    padding: 1in;
+    border: 1px solid #d6d6d6;
   }
 
   .doc p{
