--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -132,27 +132,25 @@
 
   .scrollPane{
     height: calc(100vh - 84px);
-    overflow: hidden;
-    background: transparent;
-  
+    overflow-y:auto;
+    overflow-x:hidden;
+    background:transparent;
+
     display:flex;
     justify-content:center;
-    padding: 16px 0;
-    align-items: flex-start;
   }
-  
+
   .doc{
-    box-sizing: border-box;
-    background: var(--paper, #fff);
-    width: 8.5in;
-    max-width: 100%;
-  
-    height: calc(100vh - 140px);
-    overflow-y: auto;
-    overflow-x: hidden;
-  
-    padding: 1in;
-    border: 1px solid #d6d6d6;
+    box-sizing:border-box;
+    background:var(--paper);
+    width:8.5in;
+    max-width:100%;
+    padding:1in;
+    border:1px solid #d6d6d6;
+
+    font-size:12pt;
+    line-height:2;
+    color:#000;
   }
 
   .doc p{
@@ -225,6 +223,29 @@
 
   .scrollPane{ align-items: flex-start; }
   .doc{ align-self: flex-start; }
+  
+  .doc::-webkit-scrollbar{
+    width: 10px;
+  }
+  .doc::-webkit-scrollbar-track{
+    background: transparent;
+  }
+  .doc::-webkit-scrollbar-thumb{
+    background: #b5b5b5;
+    border-radius: 10px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+  .doc::-webkit-scrollbar-thumb:hover{
+    background: #9f9f9f;
+    background-clip: content-box;
+  }
+  
+  /* Firefox */
+  .doc{
+    scrollbar-width: thin;
+    scrollbar-color: #b5b5b5 transparent;
+  }
 </style>
 </head>
 
