--- a/project-gray-zone.html
+++ b/project-gray-zone.html
@@ -225,6 +225,16 @@
 
   .scrollPane{ align-items: flex-start; }
   .doc{ align-self: flex-start; }
+
+  <!-- 兼容字体栈 -->
+  .doc{
+    font-family:
+      "Times New Roman",
+      "Nimbus Roman",
+      "Liberation Serif",
+      "TeX Gyre Termes",
+      serif;
+  }
 </style>
 </head>
 
